added content to components

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,3 +1,8 @@
-<p>
-  skills works!
-</p>
+<div id="skills">
+  <h1>Skills</h1>
+  <div class="row">
+    <div *ngFor="let skill of skills" class="col-4">
+      {{skill}}
+    </div>
+  </div>
+</div>
