--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,3 +1,4 @@
-<p>
-  about-me works!
-</p>
+<div id="aboutMe">
+<h1>About Me</h1>
+<p>An​ ​ambitious​ ​problem​ ​solver​ ​with​ ​a​ ​passion​ ​and​ ​love​ ​for​ ​developing​ ​applications​ ​and​ ​programming.​ ​I’m​ ​an​​enthusiastic  individual​ ​who​ ​loves​ ​to​ ​learn​ ​new​ ​things.​ ​I​ ​believe​ ​in​ ​taking​ ​up​ ​the​ ​responsibilities,​ ​love​ ​to​ ​work​ ​in​ ​a​ ​fast​ ​environment,  working​ ​with​ ​flexible​ ​timings​ ​for​ ​the​ ​shifts,​ ​being​ ​punctual​ ​in​ ​my​ ​work​ ​and​ ​having​ ​good​ ​work​ ​ethics.​ ​I’m​ ​a​ ​constant​ ​learner  and​ ​love​ ​building​ ​good​ ​relationships​ ​with​ ​everyone.​ ​I’m​ ​an​ ​intrinsically​ ​motivated​ ​individual​ ​and​ ​believe​ ​in​ ​giving​ ​my​ ​best​ ​at  everything​ ​I​ ​do.​ ​I​ ​understand​ ​the​ ​importance​ ​of​ ​working​ ​as​ ​a​ ​part​ ​of​ ​a​ ​team​ ​and​ ​learning​ ​from​ ​others​ ​and​ ​developing​ ​as​ ​a  professional,​ ​but​ ​I’m​ ​also​ ​comfortable​ ​to​ ​perform​ ​optimally​ ​when​ ​working​ ​individually.​ ​Besides​ ​the​ ​technical​ ​skills,​ ​I​ ​enjoy  cooking​ ​food,​ ​gyming,​ ​swimming,​ ​spending​ ​time​ ​with​ ​my​ ​friends​ ​and​ ​I​ ​love​ ​to​ ​do​ ​painting.</p>
+</div>
