all the components are added and edited

--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,3 +1,17 @@
-<p>
-  education works!
-</p>
+<div id="education">
+  <h1>Education</h1>
+  <div class="row">
+    <div class="col-6">
+      <div>
+        <p>Georgian College | Computer Programmer - 2016 – 2018 (expected)</p>
+        <p>2-year Diploma in Computer programming. Program Outline</p>
+      </div>
+    </div>
+    <div class="col-6">
+        <div>
+          <p>Gobindgarh Public School | Grade 1 to 12 (1999 - 2015)</p>
+          <p>Final High School grade: 82%. Studied Maths, Physics, Chemistry, Computer Science, Painting, and in high school</p>
+        </div>
+      </div>
+  </div>
+</div>
