--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<app-navbar></app-navbar>
 <app-about-me></app-about-me>
 <app-skills></app-skills>
 <app-work-experience></app-work-experience>
+<app-projects></app-projects>
+<app-education></app-education>
+<app-comments></app-comments>
+<app-footer></app-footer>
