--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,12 @@
-<p>
-  projects works!
-</p>
+<div id="projects">
+  <h1>Projects</h1>
+  <div class="row">
+    <div class="col-4">
+      <div>
+        <p>Luxury Muskoka Vacations</p>
+        <img src="">
+        <P></P>
+      </div>
+    </div>
+  </div>
+</div>
