--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-landing-page></app-landing-page>
 <app-about-me></app-about-me>
 <app-skills></app-skills>
 <app-work-experience></app-work-experience>
