--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,12 @@
-<div id="aboutMe">
-<h1>About Me</h1>
-<p>An​ ​ambitious​ ​problem​ ​solver​ ​with​ ​a​ ​passion​ ​and​ ​love​ ​for​ ​developing​ ​applications​ ​and​ ​programming.​ ​I’m​ ​an​​enthusiastic  individual​ ​who​ ​loves​ ​to​ ​learn​ ​new​ ​things.​ ​I​ ​believe​ ​in​ ​taking​ ​up​ ​the​ ​responsibilities,​ ​love​ ​to​ ​work​ ​in​ ​a​ ​fast​ ​environment,  working​ ​with​ ​flexible​ ​timings​ ​for​ ​the​ ​shifts,​ ​being​ ​punctual​ ​in​ ​my​ ​work​ ​and​ ​having​ ​good​ ​work​ ​ethics.​ ​I’m​ ​a​ ​constant​ ​learner  and​ ​love​ ​building​ ​good​ ​relationships​ ​with​ ​everyone.​ ​I’m​ ​an​ ​intrinsically​ ​motivated​ ​individual​ ​and​ ​believe​ ​in​ ​giving​ ​my​ ​best​ ​at  everything​ ​I​ ​do.​ ​I​ ​understand​ ​the​ ​importance​ ​of​ ​working​ ​as​ ​a​ ​part​ ​of​ ​a​ ​team​ ​and​ ​learning​ ​from​ ​others​ ​and​ ​developing​ ​as​ ​a  professional,​ ​but​ ​I’m​ ​also​ ​comfortable​ ​to​ ​perform​ ​optimally​ ​when​ ​working​ ​individually.​ ​Besides​ ​the​ ​technical​ ​skills,​ ​I​ ​enjoy  cooking​ ​food,​ ​gyming,​ ​swimming,​ ​spending​ ​time​ ​with​ ​my​ ​friends​ ​and​ ​I​ ​love​ ​to​ ​do​ ​painting.</p>
-</div>
+<section id="aboutMe" class="hero is-light is-bold is-fullheight">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        About Me
+      </h1>
+      <h2 class="subtitle">
+        An​ ​ambitious​ ​problem​ ​solver​ ​with​ ​a​ ​passion​ ​and​ ​love​ ​for​ ​developing​ ​applications​ ​and​ ​programming.​ ​I’m​ ​an​​enthusiastic  individual​ ​who​ ​loves​ ​to​ ​learn​ ​new​ ​things.​ ​I​ ​believe​ ​in​ ​taking​ ​up​ ​the​ ​responsibilities,​ ​love​ ​to​ ​work​ ​in​ ​a​ ​fast​ ​environment,  working​ ​with​ ​flexible​ ​timings​ ​for​ ​the​ ​shifts,​ ​being​ ​punctual​ ​in​ ​my​ ​work​ ​and​ ​having​ ​good​ ​work​ ​ethics.​ ​I’m​ ​a​ ​constant​ ​learner  and​ ​love​ ​building​ ​good​ ​relationships​ ​with​ ​everyone.​ ​I’m​ ​an​ ​intrinsically​ ​motivated​ ​individual​ ​and​ ​believe​ ​in​ ​giving​ ​my​ ​best​ ​at  everything​ ​I​ ​do.​ ​I​ ​understand​ ​the​ ​importance​ ​of​ ​working​ ​as​ ​a​ ​part​ ​of​ ​a​ ​team​ ​and​ ​learning​ ​from​ ​others​ ​and​ ​developing​ ​as​ ​a  professional,​ ​but​ ​I’m​ ​also​ ​comfortable​ ​to​ ​perform​ ​optimally​ ​when​ ​working​ ​individually.​ ​Besides​ ​the​ ​technical​ ​skills,​ ​I​ ​enjoy  cooking​ ​food,​ ​gyming,​ ​swimming,​ ​spending​ ​time​ ​with​ ​my​ ​friends​ ​and​ ​I​ ​love​ ​to​ ​do​ ​painting.
+      </h2>
+    </div>
+  </div>
+</section>
