--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,44 +1,33 @@
-<section class="hero is-primary is-fullheight">
-  <!-- Hero head: will stick at the top -->
+<section class="hero is-info is-fullheight">
+
   <div class="hero-head">
-    <nav class="navbar">
-      <div class="container">
-        <div class="navbar-brand">
-          <a class="navbar-item">
-            <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">
+
+    <div class="container">
+      <div id="navBar">
+        <div class="columns has-text-centered">
+          <a href="#aboutMe" class="column">
+            About Me
           </a>
-          <span class="navbar-burger burger" data-target="navbarMenuHeroA">
-            <span></span>
-            <span></span>
-            <span></span>
-          </span>
-        </div>
-        <div id="navbarMenuHeroA" class="navbar-menu">
-          <div class="navbar-end">
-            <a class="navbar-item is-active">
-              Home
-            </a>
-            <a class="navbar-item">
-              Examples
-            </a>
-            <a class="navbar-item">
-              Documentation
-            </a>
-            <span class="navbar-item">
-              <a class="button is-primary is-inverted">
-                <span class="icon">
-                  <i class="fab fa-github"></i>
-                </span>
-                <span>Download</span>
-              </a>
-            </span>
-          </div>
+          <a href="#skills" class="column">
+            Skills
+          </a>
+          <a href="workExperience" class="column">
+            Work Experience
+          </a>
+          <a href="projects" class="column">
+            Projects
+          </a>
+          <a href="education" class="column">
+            Education
+          </a>
+
         </div>
       </div>
-    </nav>
+    </div>
+
   </div>
 
-  <!-- Hero content: will be in the middle -->
+
   <div class="hero-body">
     <div class="container has-text-centered">
       <h1 class="title">
@@ -50,19 +39,7 @@
     </div>
   </div>
 
-  <!-- Hero footer: will stick at the bottom -->
   <div class="hero-foot">
-    <nav class="tabs">
-      <div class="container">
-        <ul>
-          <li class="is-active"><a>Overview</a></li>
-          <li><a>Modifiers</a></li>
-          <li><a>Grid</a></li>
-          <li><a>Elements</a></li>
-          <li><a>Components</a></li>
-          <li><a>Layout</a></li>
-        </ul>
-      </div>
-    </nav>
+
   </div>
 </section>
