--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
 <app-work-experience></app-work-experience>
 <app-projects></app-projects>
 <app-education></app-education>
-<app-comments></app-comments>
+<app-contact></app-contact>
 <app-footer></app-footer>
