fixed nav bar links

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -11,13 +11,13 @@
           <a href="#skills" class="column">
             Skills
           </a>
-          <a href="workExperience" class="column">
+          <a href="#work-experience" class="column">
             Work Experience
           </a>
-          <a href="projects" class="column">
+          <a href="#projects" class="column">
             Projects
           </a>
-          <a href="education" class="column">
+          <a href="#education" class="column">
             Education
           </a>
 
