--- a/src/app/work-experience/work-experience.component.html
+++ b/src/app/work-experience/work-experience.component.html
@@ -1,71 +1,36 @@
-<div id="work-experience">
-  <h1>Work Experience</h1>
-  <div>
-    <h2>Webmaster</h2>
-    <div>
-      <p>I am working as a Web Mater in Ontario Cottage Rentals. Updating and editing their webites.</p>
-      <p>Websites that I am woking on are -</p>
-      <ul>
-        <li>Ontario Cottage Rentals</li>
-        <li>OCR Calendar</li>
-        <li>Luxury Muskoka Vacations</li>
-        <li>Port Carling Boats</li>
-      </ul>
-      <div>
-        <h3>Details of the Website -</h3>
-        <div class="row">
-          <div class="col-12">
-            <p>
-                Ontario Cottage Rentals - Working on this website for adding, updating, and editing the cottages. Also working on the designs of their pages so that more customers should facinate and would be easy for them to book a booking of their dream cottage.
-            </p>
-          </div>
-          <div class="col-12">
-            <p>
-                OCR Calendar - Updating and editing the availability calender for the cottages which are on the website Ontario Cottage Rentals, everything is inter-linked with that website.
-            </p>
-          </div>
-          <div class="col-12">
-            <p>
-                Luxury Muskoka Vacations - This is the brand new website made by me using wordpress. This website will allows you to add, update, edit, and delete the properties. The website gives the full fledge information of the properties in a presentable way. Allows you to submit, search and inquire the property.
-            </p>
-          </div>
-          <div class="col-12">
-            <p>
-                Port Carling Boats - This is a wordpress website. The main purpose to work on this website is to add, update, and edit the pages and the new boats that came in for sale.
-            </p>
-          </div>
-
-          <div class="row">
-            <div class="col-4">Skills</div>
-          </div>
-
+<section id="work-experience" class="section has-text-grey-lightern is-bold">
+ <div class="container">
+  <div class="content">
+    <div class="">
+        <h1 class="title has-text-centered">Work Experience</h1>
+        <div class="box">
+          <h3>Webmaster</h3>
+          <h5>SME Strategies Inc.</h5>
           <div>
-            <p>Besides the technical skills, I gained good communication skills, leadership, team-work, co-operations, liability.</p>
-          </div>
+            <p>Worked as the lead web developer for SME Strategies. My primary responsibilities included:</p>
+            <ul>
+              <li>Enhancement of the existing “Ontario Cottage Rentals” website</li>
+              <li>Updating the web content according to business needs</li>
+              <li>Maintenance of the websites backend and data sources</li>
+              <li>Building, customizing and designing the themes based on client needs and user cases (CSS, JS, JQuery, HTML5, CSS frameworks like Bootstrap)</li>
+              <li>Customizing plugins to support client needs (PHP, JavaScript)</li>
+              <li>Effectively and efficiently meeting all the deadlines as well as communicating the websites progress to the Manager</li>
+            </ul>
+           </div>
         </div>
-      </div>
-
     </div>
-  </div>
-
-  <div>
-    <h2>Web Developer</h2>
-    <p>I worked as a web developer and a computer programmer in Modern Institute of Computer Software’s. I worked to maintain and update their website. Worked as a project manager to organize meetings with clients, planning and help in development of the website. I have taught and helped the students in learning their courses. My primary tasks included:</p>
-    <ul>
-      <li>To maintain and update the website</li>
-      <li>To handle the projects</li>
-      <li>To teach and help the students.</li>
-    </ul>
-    <div>
-      <p>The languages that I worked with are -</p>
-      <div class="row">
-        <div class="col-4">C#</div>
-        <div class="col-4">HTML</div>
-        <div class="col-4">CSS</div>
-        <div class="col-4">Java</div>
-      </div>
+    <div class="box">
+        <h3>Web Developer</h3>
+        <h5>Modern Institute of Computer Softwares</h5>
+        <p>Worked as a full-stack web developer in a leading private educational institute and my primary tasks included:</p>
+        <ul>
+          <li>Developing, maintaining and updating website</li>
+          <li>Meeting project deadlines in the most effective way</li>
+          <li>Contribute in the website planning and wireframe development</li>
+          <li>Worked as a project leader and acted as the customer facing part of the team, representing the business and the whole team</li>
+        </ul>
     </div>
-    <p>By working for this company I got great skills of programming language, web development, leadership, co-operation, teamwork, teaching skills, communication skills, and problem solving.</p>
-  </div>
-</div>
+   </div>
+ </div>
+</section>
 
