--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,11 +1,19 @@
 <div id="projects">
-  <h1>Projects</h1>
-  <div class="row">
-    <div class="col-4">
-      <div>
-        <p>Luxury Muskoka Vacations</p>
-        <img src="">
-        <P></P>
+  <h1 class="title has-text-centered">Projects</h1>
+  <div class="columns is-multiline">
+    <div class="column is-3 flip-container" ontouchstart="this.classList.toggle('hover');" *ngFor="let project of projects">
+      <div class="box flipper">
+        <div class="front">
+          <h2>{{ project.heading }}</h2><br>
+          <figure class="image is-2by1">
+              <img src='{{ project.imageURL }}'/>
+          </figure><br>
+          <p>{{ project.languages }}</p>
+        </div>
+        <div class="back">
+          <p>{{ project.desc }}</p><br>
+          <a href="{{ project.link }}" class="button is-success is-medium" target="_blank">Link</a>
+        </div>
       </div>
     </div>
   </div>
