added navbar option for contact in landing page

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -20,7 +20,9 @@
           <a href="#education" class="column">
             Education
           </a>
-
+          <a href="#contact" class="column">
+            Contact
+          </a>
         </div>
       </div>
     </div>
