--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,50 @@
-<p>
-  contact works!
-</p>
+<section id="contact">
+  <div class="hero-body">
+    <div class="container  has-text-centered box">
+      <h1 class="title">
+        Contact
+      </h1>
+      <div class="columns">
+        <div class="column is-4 has-text-left">
+          <div class="box">
+            <p>What's your opinion? Leave a note.</p>
+            <p><span class="icon is-small is-left"><i class="fas fa-map-marker"></i></span>Barrie, Ontario, Canada</p>
+            <p><span class="icon is-small is-left"><i class="fas fa-mobile-alt"></i></span>+1 705-500-6391</p>
+            <p><span class="icon is-small is-left"><i class="fas fa-envelope"></i></span>verma.sahil3232@gmail.com</p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="field">
+              <div class="control">
+                <input class="input" type="text" placeholder="Name">
+              </div>
+          </div>
+            
+          <div class="field">
+            <div class="control has-icons-left">
+              <input class="input" type="email" placeholder="Email">
+              <span class="icon is-small is-left">
+                <i class="fas fa-envelope"></i>
+              </span>
+            </div>
+          </div>
+              
+          <div class="field">
+            <div class="control">
+              <textarea class="textarea" placeholder="Textarea"></textarea>
+            </div>
+          </div>
+            
+          <div class="field is-grouped">
+            <div class="control">
+              <button class="button is-link">Submit</button>
+            </div>
+            <div class="control">
+              <button class="button">Reset</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
