footer created and designed

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,22 +1,23 @@
-<div class="footer">
-	<footer class="text-center">
-	  <a href="#" data-toggle="tooltip" data-placement="top" title="TO TOP">
-		  <span class="glyphicon glyphicon-chevron-up"></span>
-		</a><br>
-		<div class="row" style="padding: 10px 0px 15px 0px;">
-      <div class="col-md-4">
-            
+<section id="footer" class="hero is-dark">
+  <div class="hero-body has-text-centered">
+    <a href="#">
+      <span class="icon">
+        <i class="fas fa-angle-up"></i>
+      </span>
+    </a>
+    <div class="columns">
+      <div class="column">
+
       </div>
-      <div class="col-md-4">
-        <p style="padding-top: 10px">Author - Sahil Verma</p> 
+      <div class="column">
+        <h2 class="title has-text-centered">Author - Sahil Verma</h2>
       </div>
-      <div class="col-md-4">
-        <a href="https://www.facebook.com/sahil.verma.1048" class="fa fa-facebook" target="_blank"></a>
-        <a href="https://www.linkedin.com/in/sahil-verma-6469ab124" class="fa fa-linkedin" target="_blank"></a>
-        <a href="https://www.instagram.com/sahil.verma.1048/" class="fa fa-instagram" target="_blank"></a>
-        <a href="" class="fa fa-snapchat-ghost" target="_blank"></a>
-        <a href="https://plus.google.com/u/0/114575851994290451291" class="fa fa-google" target="_blank"></a>
+      <div class="column">
+        <a href="https://github.com/sahil-verma" class="fab fa-github fa-w-16 fa-2x" target="_blank"></a>
+				<a href="https://www.linkedin.com/in/sahil-verma-6469ab124" class="fab fa-linkedin-in fa-w-16 fa-2x" target="_blank"></a>
+				<a href="https://www.instagram.com/sahil.verma.1048/" class="fab fa-instagram fa-w-16 fa-2x" target="_blank"></a>
+				<a href="https://plus.google.com/u/0/114575851994290451291" class="fab fa-google-plus-g fa-w-16 fa-2x" target="_blank"></a>
       </div>
-	  </div>
-	</footer>
-</div>
+    </div>
+  </div>
+</section>
