added the maps for the location of schools

--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -6,30 +6,14 @@
         <div class="column">
           <div>
             <p>Georgian College | Computer Programmer - 2016 – 2018</p>
-            <p>2-year Diploma in Computer programming. <a href="http://www.georgiancollege.ca/programoutlines/201710/COPR.PDF" target="_blank">Program Outline</a></p>
-            <div id="map"></div>
-            <script>
-              function initMap() {
-                var uluru = {lat: -25.363, lng: 131.044};
-                var map = new google.maps.Map(document.getElementById('map'), {
-                  zoom: 4,
-                  center: uluru
-                });
-                var marker = new google.maps.Marker({
-                  position: uluru,
-                  map: map
-                });
-              }
-            </script>
-            <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9NHd-dLTWzHf6djfoL9N3uWLhVpo0O3c&callback=initMap">
-            </script>
+            <p>2-year Diploma in Computer programming. <a href="http://www.georgiancollege.ca/programoutlines/201710/COPR.PDF" target="_blank">Program Outline</a></p><br>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22800.266043116848!2d-79.68656256304389!3d44.41196331105325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882aa3724b04a0b3%3A0x7894d4f2316bbb8d!2sGeorgian+College!5e0!3m2!1sen!2sca!4v1525227108710" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
         </div>
         <div class="column">
           <div>
             <p>Gobindgarh Public School | Grade 1 to 12 (1999 - 2015)</p>
-            <p>Final High School grade: 82%. Studied Maths, Physics, Chemistry, Computer Science, Painting, and in high school</p><br>
+            <p>Final High School grade: 82%. Studied Maths, Physics, Chemistry, Computer Science, Painting, and in high school</p>
             <iframe src="https://www.google.com/maps/d/embed?mid=1oNhFhSYeW-QsiZHrOIkP0wvMpYs" width="100%" height="400"></iframe>
           </div>
         </div>
