--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,34 +1,33 @@
 <section class="hero is-info is-fullheight">
 
   <div class="hero-head">
-
-    <div class="container">
-      <div id="navBar">
-        <div class="columns has-text-centered">
-          <a href="#aboutMe" class="column">
-            About Me
-          </a>
-          <a href="#skills" class="column">
-            Skills
-          </a>
-          <a href="#work-experience" class="column">
-            Work Experience
-          </a>
-          <a href="#projects" class="column">
-            Projects
-          </a>
-          <a href="#education" class="column">
-            Education
-          </a>
-          <a href="#contact" class="column">
-            Contact
-          </a>
+    <nav class="navbar is-fixed-top">
+      <div class="container">
+        <div id="navBar">
+          <div class="columns has-text-centered">
+            <a href="#aboutMe" class="column">
+              About Me
+            </a>
+            <a href="#skills" class="column">
+              Skills
+            </a>
+            <a href="#work-experience" class="column is-one-fifth">
+              Work Experience
+            </a>
+            <a href="#projects" class="column">
+              Projects
+            </a>
+            <a href="#education" class="column">
+              Education
+            </a>
+            <a href="#contact" class="column">
+              Contact
+            </a>
+          </div>
         </div>
       </div>
-    </div>
-
+    </nav>
   </div>
-
 
   <div class="hero-body">
     <div class="container has-text-centered">
