adjustment in spacings of the boxes

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div id="projects">
+<section id="projects">
   <h1 class="title has-text-centered">Projects</h1>
   <div class="columns is-multiline">
     <div class="column is-3 flip-container" ontouchstart="this.classList.toggle('hover');" *ngFor="let project of projects">
@@ -17,4 +17,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
