--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -32,11 +32,8 @@
   <div class="hero-body">
     <div class="container has-text-centered">
       <h1 class="title">
-        Title
+        Portfolio
       </h1>
-      <h2 class="subtitle">
-        Subtitle
-      </h2>
     </div>
   </div>
 
