links added to the projects

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -11,8 +11,10 @@
           <p>{{ project.languages }}</p>
         </div>
         <div class="back">
-          <p>{{ project.desc }}</p><br>
-          <a href="{{ project.link }}" class="button is-success is-medium" target="_blank">Link</a>
+          <div class="box has-text-centered">
+            <p>{{ project.desc }}</p><br>
+            <a href="{{ project.link }}" class="button is-success is-medium" target="_blank">Link</a>
+          </div>
         </div>
       </div>
     </div>
