--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -42,10 +42,11 @@
 }
 
 /* back, initially hidden pane */
-.back {
+.back .box{
 	transform: rotateY(180deg);
-
+	background-color: white;
+	
 	position: absolute;
 	top: 0;
-	left: 0;
+	right: 0;
 }
