changed the title of landing page

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -32,8 +32,11 @@
   <div class="hero-body">
     <div class="container has-text-centered">
       <h1 class="title">
-        Portfolio
+        Sahil Verma
       </h1>
+      <h4>
+        Web. Mobile. & Everything Else.
+      </h4>
     </div>
   </div>
 
