--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -6,5 +6,14 @@
   margin: 1em auto;
   width: 70%;
 }
+.title{
+  margin-bottom: 0em;
+  font-size: 2.8em;
+  font-family: serif;
+
+}
+h4{
+  font-family: -webkit-body;
+}
 
 
